Handle compressed chunk maps